# SDF_2D_generator

./: README.md  README.zh-CN.md
Qt_project/SDF_2D_generator/: CMakeLists.txt  SdfWorker.cpp  SdfWorker.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
SDFGenerate_cpp/: CMakeLists.txt  GenerateSelf.cpp  SDFGenerate.cpp  errorLog.txt
